# TTYDR-Randomizer

./: .clang-format  CMakeLists.txt  README.md
Include/: Mod.hpp  Offsets.hpp  SDK.hpp  SoftwareKeyboard.hpp  Types.hpp  Util.hpp
Include/Core/: ExceptionHandler.hpp  Hooks.hpp  Logger.hpp  Mod.hpp
Include/Patches/: AudienceSetItemHook.hpp  BattleUnitPosessionItemHook.hpp  CharlietonOverworldItemsHook.hpp  CharlietonPitItemsHook.hpp  DamageCheckCrashFixHooks.hpp  EntryDropForMobjHook.hpp  FsManagerCtorHook.hpp  MainInitHook.hpp  SetBadgeShopItemsHook.hpp  SetDazzleItemsHook.hpp  SetFieldItemHook.hpp  SetupShopItemsHook.hpp
Include/SDK/: Battle.hpp  Collision.hpp  Fs.hpp  Gswf.hpp  Hid.hpp  Math.hpp  Pouch.hpp  String.hpp  UI.hpp  Util.hpp  Wld.hpp
Include/SDK/Gfx/: GfxCam.hpp
Include/SDK/Sys/: Time.hpp
Include/SDK/Wld/: WldBtl.hpp  WldCam.hpp  WldChr.hpp  WldData.hpp  WldFld.hpp  WldHandle.hpp  WldItem.hpp  WldRes.hpp
Include/nnSdk/: diag.hpp  fs.hpp  hid.hpp  nifm.hpp  oe.hpp  os.hpp  result.hpp  socket.hpp  swkbd.hpp  time.hpp  util.hpp  util_BitFlagSet.hpp
Source/: Main.cpp  Mod.cpp  SoftwareKeyboard.cpp  Util.cpp
Source/Core/: ExceptionHandler.cpp  Hooks.cpp  Logger.cpp  Mod.cpp
Source/Patches/: AudienceSetItemHook.cpp  BattleUnitPosessionItemHook.cpp  CharlietonOverworldItemsHook.cpp  CharlietonPitItemsHook.cpp  DamageCheckCrashFixHooks.cpp  EntryDropForMobjHook.cpp  FsManagerCtorHook.cpp  MainInitHook.cpp  SetBadgeShopItemsHook.cpp  SetDazzleItemsHook.cpp  SetFieldItemHook.cpp  SetupShopItems.cpp
Source/SDK/: Fs.cpp  Gswf.cpp  String.cpp
Source/SDK/Wld/: WldFld.cpp
cmake/: SwitchTools.cmake  toolchain.cmake
module/: subsdk9.json.template
